# prediction-market-backtesting

./: .gitignore  .gitmodules  .ruff.toml  AGENTS.md  CODEBASE_UML.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  Makefile  NOTICE  PLAN.md  README.md  _nautilus_bootstrap.py  _script_helpers.py  conftest.py  main.py  mkdocs.yml  pmxt_raw_download.py  pyproject.toml  pyrightconfig.json
backtests/: _defaults.py  _kalshi_single_market_trade_runner.py  _polymarket_single_market_runner.py  _script_helpers.py  _timing_test.py  generic_optimizer_research.ipynb  generic_tpe_research.ipynb  kalshi_breakout.py  kalshi_ema_bars.py  kalshi_ema_crossover.py  kalshi_panic_fade.py  kalshi_rsi_reversion.py  kalshi_spread_capture.py  kalshi_trade_tick_breakout.py  kalshi_trade_tick_ema_crossover.py  kalshi_trade_tick_independent_multi_replay_runner.py  kalshi_trade_tick_joint_portfolio_runner.py  kalshi_trade_tick_multi_sim_runner.py  kalshi_trade_tick_panic_fade.py  kalshi_trade_tick_rsi_reversion.py  kalshi_trade_tick_spread_capture.py  pmxt_book_joint_portfolio_runner.ipynb  pmxt_quote_tick_joint_portfolio_runner.ipynb  polymarket_beffer45_trade_replay_telonex.py  polymarket_book_buy_sell_random.py  polymarket_book_ema_crossover.py  polymarket_book_ema_optimizer.py  polymarket_book_independent_25_replay_runner.py  polymarket_book_independent_multi_replay_runner.py  polymarket_book_joint_portfolio_runner.py  polymarket_btc_5m_late_favorite_taker_hold.py  polymarket_btc_5m_pair_arbitrage.py  polymarket_deep_value_resolution_hold.py  polymarket_ema_crossover.py  (+64 more)
docs/: backtests.md  (+16 more)
(+423 files in other folders)
